--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "getdog",
   "version": "1.0.0",
-  "description": "web app that serves random dog pics using place.dog api",
+  "description": "I'm currently on the path of learning how to create full-stack applications, and I'm trying to avoid frameworks as much as possible during this phase because I want to get a deeper sense of how things work under the hood. This is my first back-end project that makes use of an API, using only the built-in HTTP and HTTPS modules.",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,13 +10,10 @@
     "type": "git",
     "url": "git+https://github.com/sdaoud9801/getdog.git"
   },
-  "author": "salah daoud",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sdaoud9801/getdog/issues"
   },
-  "homepage": "https://github.com/sdaoud9801/getdog#readme",
-  "dependencies": {
-    "webpack": "^5.98.0"
-  }
+  "homepage": "https://github.com/sdaoud9801/getdog#readme"
 }
